--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -12,10 +12,15 @@
             <p>Persona Jurídica</p>
       </header>
   
-         <div>
-              <label for="ruc">RUC</label>
-              <input type="textB" id="ruc" name="ruc" placeholder="Ej.:10152346872">
-         </div>
+      <div class="col-md-4">
+        <div class="form-group">
+            <label class="control-label required">N° de RUC del cliente</label>
+            <div>
+              <input type="textB" id="ruc" name="ruc" placeholder="Ej.:15234687">
+
+            </div>
+        </div>
+    </div>
     
           <div>
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
