--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -1,6 +1,6 @@
 <body class="align">
     <div class="login">
-      <form action="#" class="login__form" method="POST">      
+      <form action="#" class="login__form">      
       <header class="login__header">
           <div class="logo-produce">
               <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
