--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -31,6 +31,8 @@
     transition: all 0.3s;
   }
   
+
+  
   p {
     margin: 0px;
     padding: 0px;
@@ -173,7 +175,7 @@
   }
   
   
-  .login input[type=textB] {
+  .login input[type=text] {
     background-color: #fff;
     width: 100%;
     padding: 4px 7px;
@@ -184,8 +186,20 @@
     font-size: 12px;
   }
   
-  .login input[type=textP] {
-    background-color: #eee;
+/*   
+  .login input[type=text] {
+    background-color: #fff;
+    width: 100%;
+    padding: 4px 7px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 1px;
+    box-sizing: border-box;
+    font-size: 12px;
+  } */
+
+  .login input {
+    background-color: #fff;
     width: 100%;
     padding: 4px 7px;
     display: inline-block;
@@ -194,8 +208,22 @@
     box-sizing: border-box;
     font-size: 12px;
   }
+
+
+
+  .login input:required {
+    border: 1px solid #EB1E23;
+  }
+
+  .login input:invalid {
+    border: 2px solid #EB1E23;
+  }
   
-  .login select[type="tipoDoc"] {
+  .login input:valid {
+    border: 2px solid #ccc;
+  }
+
+  .login select {
     padding: 5px 7px;
     width: 80%;
     font-size: 12px;
@@ -203,13 +231,28 @@
     border-radius: 1px;
     box-sizing: border-box;
   }
+
+
+  .login select:required {
+    border: 1px solid #EB1E23;
+  }
+
+  .login select:invalid {
+    border: 2px solid #EB1E23;
+  }
   
+  .login select:valid {
+    border: 2px solid #ccc;
+  }
+
   
   .login input[type="submit"] {
     display: block;
     margin: 0px auto;
   }
   
+  
+
   .logo-produce, h1, p {
     text-align: left;
     padding-top: 0px;
