--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -1,76 +1,85 @@
 <body class="align">
-    <div class="login">
-      <form action="#" class="login__form" method="POST" [formGroup]="validateForm">      
+    <div class="login">    
       <header class="login__header">
           <div class="logo-produce">
               <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-            </div>  
+          </div>  
           <div class="logo-aplicacion">
             <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
           </div>
             <h3>REGISTRATE</h3>
             <p>Persona Natural</p>
       </header>
-  
       <div class="center">
-        <button class="buttonPaso" disabled >1</button>
-        <button class="buttonPaso disabled" disabled >2</button>
+        <button class="buttonPaso" (click)="clickPaso1()" >1</button>
+        <button class="buttonPaso" (click)="clickPaso2()" >2</button>
       </div>
-  
-      <label class="check" id="c1">TENGO RUC
-        <input type="checkbox" >
-        <span class="checkmark"></span>
-      </label>
-  
-      <div >
-          <label class="control-label" >RUC</label>
-          <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872" maxlength="11" formControlName="ruc"   [(ngModel)]="ruc" required >
-       </div>
-  
-       <div class="column">
-          <div class="left">
-              <label for="tipoDoc">TIPO DOCUMENTO</label>
-              <select name="select" placeholder="Seleccionar" formControlName="tipoDoc" [(ngModel)]="tipoDoc" required >
-                  <option value="Opción1">DNI</option>
-                  <option value="Opción2">Carnet de Extranjería</option>
+      <div *ngIf="isVisiblePaso1">
+        <label class="check" id="c1">TENGO RUC
+          <input type="checkbox" [(ngModel)]="tengoRuc" (change)="changeTengoRuc($event)">
+          <span class="checkmark"></span>
+        </label>
+    
+        <div *ngIf="tengoRuc">
+            <label class="control-label" >RUC</label>
+            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872" maxlength="11" [(ngModel)]="ruc" (change)="changeRuc($event)" >
+            <p class="validador" *ngIf="validadorRuc">Debe ingresar el RUC</p>
+         </div>
+    
+         <div class="column">
+            <div class="left">
+                <label for="tipoDoc">TIPO DOCUMENTO</label>
+                <select name="select" placeholder="Seleccionar" [(ngModel)]="tipoDoc" (change)="changeTipoDocumento($event)">
+                    <option value="1">DNI</option>
+                    <option value="2">Carnet de Extranjería</option>
                 </select>
-          </div>        
-          <div class="right">
-              <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" formControlName="numeroDoc" [(ngModel)]="numeroDoc"  required>
+                <p class="validador" *ngIf="validadorTipoDocumento">Debe ingresar el tipo de documento.</p>
+            </div>        
+            <div class="right">
+                <label for="numeroDoc">NÚMERO DOCUMENTO</label>
+                <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)">
+                <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
+            </div>
+        </div>
+    
+          <div>
+            <label for="apellidos">APELLIDOS</label>
+            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApeliidos($event)">
+            <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
+          </div>
+    
+          <div>
+            <label for="nombres">NOMBRES</label>
+            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)">
+            <p class="validador" *ngIf="validadorNombres">Debe ingresar los nombres.</p>
+          </div>
+    
+          <div>
+            <label for="celular">CELULAR</label>
+            <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)">
+            <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
+          </div>
+    
+          <div>
+            <button class="buttonSiguiente" (click)="clickPaso2()">Siguiente</button>
+            <button class="buttonCancelar">Cancelar</button>
           </div>
       </div>
-  
-        <div>
-          <label for="apellidos">APELLIDOS</label>
-          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" formControlName="apellidos" [(ngModel)]="apellidos"  required>
-        </div>
-  
-        <div>
-          <label for="nombres">NOMBRES</label>
-          <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" formControlName="nombres" [(ngModel)]="nombres"  required>
-        </div>
-  
-        <div>
-          <label for="celular">CELULAR</label>
-          <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" formControlName="celular" [(ngModel)]="celular" required>
-        </div>
-  
+      <div *ngIf="isVisiblePaso2">
         <div>
           <label for="correo">CORREO</label>
-          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  formControlName="correo" [(ngModel)]="correo" required>
+          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo">
         </div>
   
         <div>
           <label for="contrasena">CONTRASEÑA</label>
-          <input type="password"  id="contrasena" name="contrasena" placeholder="" formControlName="contrasena" [(ngModel)]="contrasena"  required>
+          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena">
         </div>
   
         <div>
           <label for="rep_contrasena">REPETIR CONTRASEÑA</label>
-          <input type="password"  id="rep_contrasena" name="rep_contrasena" placeholder="" formControlName="rep_contrasena" [(ngModel)]="rep_contrasena"  required>
+          <input type="password"  id="rep_contrasena" name="rep_contrasena" placeholder="" [(ngModel)]="rep_contrasena">
         </div>
-  
         <div class="column">
           <div class="left">
             <label class="radio">Al menos un simbolo
@@ -85,48 +94,43 @@
              <span class="checkradio"></span>
             </label>
          </div>
-       </div>
+        </div>
   
-       <div class="columnRadio">
+        <div class="columnRadio">
         <div class="left">
           <label class="radio">Al menos una mayuscula
            <input type="radio"  name="radio">
            <span class="checkradio"></span>
           </label>
-       </div>
+        </div>
         
         <div class="right">
           <label class="radio">Más de 8 digitos
            <input type="radio"  name="radio">
            <span class="checkradio"></span>
           </label>
-       </div>
-     </div>
-  
+        </div>
         <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
           <input type="checkbox">
           <span class="checkmark"></span>
         </label>
-  
+
         <label class="check" id="c1">Acepto los términos y la mensajeria
           <input type="checkbox" >
           <span class="checkmark"></span>
         </label>
-   
-  
+
         <div>
-          <button class="buttonSiguiente" disabled >Siguiente</button>
-          <button class="buttonSiguiente" (click)="registroPersona()">Registrar</button>
-          <button class="buttonCancelar" disabled>Cancelar</button> 
-          <button class="buttonCancelar" disabled>Regresar</button>      
+          <button class="buttonSiguiente" (click)="registroPersonaService()">Registrar</button>
+          <button class="buttonCancelar"  (click)="clickPaso1()">Regresar</button>      
         </div>
-  
-        <div class="center">
-          <p>¿Ya tienes una cuenta?</p>  
-          <a href="#">Ingresa aquí</a>
+ 
         </div>
-  
-      </form>
+      </div>
+      <div class="center">
+        <p>¿Ya tienes una cuenta?</p>  
+        <a href="#">Ingresa aquí</a>
+      </div>
     </div>
   
   </body>
