--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -1,5 +1,6 @@
 <body class="align">
     <div class="login">    
+      <div class="login__form">  
       <header class="login__header">
           <div class="logo-produce">
               <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
@@ -132,6 +133,6 @@
         <a href="#">Ingresa aquí</a>
       </div>
     </div>
-  
+  </div>
   </body>
   
