--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/app.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <div class="container" style="background-color: #eee">
     <router-outlet></router-outlet>
   </div>
 </body>
