--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -8,7 +8,6 @@
   }
   
   body {
-    background-color: #fff;
     font-family: 'Varela Round', sans-serif;
     line-height: 1.5;
     margin: 0;
@@ -61,6 +60,7 @@
   .align {
     display: grid;
     place-items: center;
+    background-color: #eee;
   }
   
   /* ---------- BUTTON ---------- */
