--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/app.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/app.component.html
@@ -1,6 +1,16 @@
+
 <body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container" style="background-color: #eee">
-    <router-outlet></router-outlet>
-  </div>
+  <nav>
+<ul>
+  <li><a  class="active" disable>Componentes</a></li>
+  <li><a  [routerLink]="['/registro-persona']">Registro Persona</a></li>
+  <li><a [routerLink]="['/registro-empresa']">Registro Empresa</a></li>
+  <li><a [routerLink]="['/sesion-persona']">Sesión Persona</a></li>
+  <li><a [routerLink]="['/sesion-empresa']">Sesión Empresa</a></li>
+  <li><a [routerLink]="['/recuperar-contrasena-persona']">Recuperar Contraseña Persona</a></li>
+  <li><a [routerLink]="['/recuperar-contrasena-empresa']">Recuperar Contraseña Empresa</a></li>
+</ul>
+<router-outlet></router-outlet>
+</nav>
 </body>
+
