--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -11,7 +11,7 @@
     font-family: 'Varela Round', sans-serif;
     line-height: 1.5;
     margin: 0;
-    padding: 2vmin;
+    padding: 0vmin;
   }
   
   /*min-block-size: 10vh;*/
@@ -24,6 +24,7 @@
     font-size: 10px;
     color: #f90000;
     text-align: left;
+    margin-bottom: 10px;
   }
   
   input {
@@ -61,6 +62,7 @@
     display: grid;
     place-items: center;
     background-color: #eee;
+    margin-left: 180px;
   }
   
   /* ---------- BUTTON ---------- */
@@ -68,34 +70,36 @@
   .buttonSiguiente {
     background-color: #58595B;
     color: #FFFFFF;
-    margin-bottom: 5px;
-    width: 95.8%;
+    margin: 12px 0px 6px 0px;
+    width: 100%;
     font-size: 12px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
     border-radius: 1px;
     padding: 3px 6px;
+    border: 2px solid #58595B;
   }
   
   .buttonCancelar {
     background-color: #eee;
     color: #000;
     margin-bottom: 5px;
-    width: 95.8%;
+    width: 100%;
     font-size: 12px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
     border-radius: 1px;
     padding: 3px 6px;
+    border: 2px solid #ccc;
   }
   
   .buttonPaso {
     background-color: #000000; /* Green */
     border: none;
     color: white;
-    padding: 6px 10px;
+    padding: 6px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -112,6 +116,7 @@
   
   /* ---------- ICONS ---------- */
   .icons {
+    
     display: none;
   }
   
@@ -124,7 +129,8 @@
   
   /* ---------- LOGIN ---------- */
   .login {
-    width: 450px;
+    width: 465px;
+
   }
   
   .login__header {
@@ -163,13 +169,13 @@
   
   .login__form {
     background-color: #fff;
-    border-bottom-left-radius: 1.25em;
-    border-bottom-right-radius: 1.25em;
+    border-bottom-left-radius: 0em;
+    border-bottom-right-radius: 0em;
     color: #777;
     display: grid;
     gap: 0.875em;
-    padding: 0em 2.90em;
-    border-left:10px #28ad63;
+    padding: 1em 1em;
+    
   }
   
   
@@ -180,16 +186,18 @@
   }
   
   
-  .login input[type=text] {
+  .login input {
     background-color: #fff;
     width: 100%;
-    padding: 4px 7px;
+    padding: 5px 7px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 1px;
     box-sizing: border-box;
     font-size: 12px;
+    margin-bottom: 5px;
   }
+
   
 /*   
   .login input[type=text] {
@@ -203,29 +211,17 @@
     font-size: 12px;
   } */
 
-  .login input {
-    background-color: #fff;
-    width: 100%;
-    padding: 4px 7px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    font-size: 12px;
-  }
-
-
 
   .login input:required {
     border: 1px solid #EB1E23;
   }
 
   .login input:invalid {
-    border: 2px solid #EB1E23;
+    border: 1px solid #EB1E23;
   }
   
   .login input:valid {
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
   }
 
   .login select {
@@ -344,11 +340,11 @@
   
   /* estilo del marcador */
   .check .checkmark:after {
-    left: 6px;
-    top: 3px;
+    left: 7px;
+    top: 4px;
     width: 1px;
-    height: 5px;
-    border: solid white;
+    height: 7px;
+    border: solid #fff;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
@@ -409,7 +405,7 @@
   
   /* Cuando el botón de radio está marcado, agrega un fondo azul */
   .radio input:checked ~ .checkradio {
-    background-color: #3ec77c;
+    background-color: #000;
   }
   
   /* Crea el indicador (el punto/círculo - oculto cuando no está marcado) */
