--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -15,13 +15,13 @@
          
           <div>
               <label for="numeroDoc">NÚMERO DE DOCUMENTO</label>
-              <input type="textB" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
           </div>
     
      
           <div>
             <label for="correo">CORREO ELECTRONICO</label>
-            <input type="textB" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
+            <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
           </div>
     
         <div>
