--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -23,17 +23,17 @@
   
       <div>
           <label for="ruc">RUC</label>
-          <input type="textB" id="ruc" name="ruc" placeholder="Ej.:10152346872">
+          <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872">
        </div>
       
        <div>
         <label for="apellidos">RAZÓN SOCIAL</label>
-        <input type="textP" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
+        <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
       </div>
 
       <div>
         <label for="nombres">DIRECCIÓN</label>
-        <input type="textP" id="nombres" name="nombres" placeholder="Ej.:Camila">
+        <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila">
       </div>
   
       <h5 class="center">DATOS REPRESENTANTE LEGAL</h5>
@@ -50,45 +50,45 @@
           </div>        
           <div class="right">
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="textB" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
           </div>
       </div>
   
         <div>
           <label for="apellidos">APELLIDOS</label>
-          <input type="textP" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
+          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
         </div>
   
         <div>
           <label for="nombres">NOMBRES</label>
-          <input type="textP" id="nombres" name="nombres" placeholder="Ej.:Camila">
+          <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila">
         </div>
   
         <h5 class="center">DATOS DE CONTACTO</h5>
 
         <div>
           <label for="celular">CELULAR</label>
-          <input type="textB" id="celular" name="celular" placeholder="Ej.:999123045">
+          <input type="text" id="celular" name="celular" placeholder="Ej.:999123045">
         </div>
   
         <div>
           <label for="correo">CORREO</label>
-          <input type="textB" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
+          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
         </div>
   
         <div>
           <label for="rep_correo">REPETIR CORREO</label>
-          <input type="textB" id="rep_correo" name="rep_correo" placeholder="Ej.:camila.flores@ejemplo.com">
+          <input type="text" id="rep_correo" name="rep_correo" placeholder="Ej.:camila.flores@ejemplo.com">
         </div>
   
         <div>
           <label for="contraseña">CONTRASEÑA</label>
-          <input type="textB" id="contraseña" name="contraseña" placeholder="">
+          <input type="text" id="contraseña" name="contraseña" placeholder="">
         </div>
   
         <div>
           <label for="rep_contraseña">REPETIR CONTRASEÑA</label>
-          <input type="textB" id="rep_contraseña" name="rep_contraseña" placeholder="">
+          <input type="text" id="rep_contraseña" name="rep_contraseña" placeholder="">
         </div>
   
         <div class="column">
