--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -12,24 +12,21 @@
             <p>Persona Jurídica</p>
       </header>
   
-      <div class="col-md-4">
-        <div class="form-group">
-            <label class="control-label required">N° de RUC del cliente</label>
-            <div>
-              <input type="textB" id="ruc" name="ruc" placeholder="Ej.:15234687">
 
-            </div>
+
+        <div>
+             <label for="ruc">N° de RUC del cliente</label>
+            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872">
         </div>
-    </div>
     
           <div>
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="textB" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
           </div>
     
         <div>
           <label for="contraseña">CONTRASEÑA</label>
-          <input type="textB" id="contraseña" name="contraseña" placeholder="">
+          <input type="text" id="contraseña" name="contraseña" placeholder="">
           <a style="text-align:left" href="#"></a>
         </div>
     
