--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
@@ -1,379 +1,422 @@
 /* ---------- GENERAL ---------- */
 * {
-    box-sizing: inherit;
-  }
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Varela Round', sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0vmin;
+}
+
+/*min-block-size: 10vh;*/
+
+h2 {
+  font-size: 1.75rem;
+}
+
+.validador{
+  font-size: 10px;
+  color: #f90000;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+input {
+  background-image: none;
+  border: none;
+  font: inherit;
+  margin: 0px;
+  padding: 0px;
+  transition: all 0.3s;
+}
+
+
+
+p {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+ 
+svg {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+a {
+  text-align: center;
+  width: 100%;
+  color: #000;
+}
+ 
+
+/* ---------- ALIGN ---------- */
+.align {
+  display: grid;
+  place-items: center;
+  background-color: #eee;
+  margin-left: 180px;
+}
+
+/* ---------- BUTTON ---------- */
+
+.buttonSiguiente {
+  background-color: #58595B;
+  color: #FFFFFF;
+  margin: 12px 0px 6px 0px;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 3px 6px;
+  border: 2px solid #58595B;
+}
+
+.buttonCancelar {
+  background-color: #eee;
+  color: #000;
+  margin-bottom: 5px;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 1px;
+  padding: 3px 6px;
+  border: 2px solid #ccc;
+}
+
+.buttonPaso {
+  background-color: #000000; /* Green */
+  border: none;
+  color: white;
+  padding: 6px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 7px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.buttonSiguiente:hover {
+  background-color: #000000;
+}
+
+
+/* ---------- ICONS ---------- */
+.icons {
   
-  html {
-    box-sizing: border-box;
-  }
+  display: none;
+}
+
+.icon {
+  fill: currentcolor;
+  display: inline-block;
+  height: 1em;
+  width: 1em;
+}
+
+/* ---------- LOGIN ---------- */
+.login {
+  width: 465px;
+
+}
+
+.login__header {
+  background-color: #fff;
+  border-top-left-radius: 1.25em;
+  border-top-right-radius: 1.25em;
+  color: #000;
+}
+
+.login__header h3 {
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+
+.login__header p {
+  text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  padding-top: 0%;
+}
+
+
+.login__header :first-child {
+  margin-top: 0;
+}
+
+.login__header :last-child {
+  margin-bottom: 0;
+}
+
+.login h2 .icon {
+  margin-right: 14px;
+}
+
+.login__form {
+  background-color: #fff;
+  border-bottom-left-radius: 0em;
+  border-bottom-right-radius: 0em;
+  color: #777;
+  display: grid;
+  gap: 0.875em;
+  padding: 1em 1em;
   
-  body {
-    background-color: #fff;
-    font-family: 'Varela Round', sans-serif;
-    line-height: 1.5;
-    margin: 0;
-    padding: 2vmin;
-  }
-  
-  /*min-block-size: 10vh;*/
-  
-  h2 {
-    font-size: 1.75rem;
-  }
-  
-  
-  input {
-    background-image: none;
-    border: none;
-    font: inherit;
-    margin: 0px;
-    padding: 0px;
-    transition: all 0.3s;
-  }
-  
-  p {
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-  }
-   
-  svg {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-  
-  a {
-    text-align: center;
-    width: 100%;
-    color: #000;
-  }
-   
-  
-  /* ---------- ALIGN ---------- */
-  .align {
-    display: grid;
-    place-items: center;
-  }
-  
-  /* ---------- BUTTON ---------- */
-  
-  .buttonSiguiente {
-    background-color: #58595B;
-    color: #FFFFFF;
-    margin-bottom: 5px;
-    width: 95.8%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 3px 6px;
-  }
-  
-  .buttonCancelar {
-    background-color: #eee;
-    color: #000;
-    margin-bottom: 5px;
-    width: 95.8%;
-    font-size: 12px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 1px;
-    padding: 3px 6px;
-  }
-  
-  .buttonPaso {
-    background-color: #000000; /* Green */
-    border: none;
-    color: white;
-    padding: 6px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 4px 7px;
-    cursor: pointer;
-    border-radius: 50%;
-  }
-  
-  .buttonSiguiente:hover {
-    background-color: #000000;
-  }
-  
-  
-  /* ---------- ICONS ---------- */
-  .icons {
-    display: none;
-  }
-  
-  .icon {
-    fill: currentcolor;
-    display: inline-block;
-    height: 1em;
-    width: 1em;
-  }
-  
-  /* ---------- LOGIN ---------- */
-  .login {
-    width: 450px;
-  }
-  
-  .login__header {
-    background-color: #fff;
-    border-top-left-radius: 1.25em;
-    border-top-right-radius: 1.25em;
-    color: #000;
-  }
-  
-  .login__header h3 {
-    text-align: center;
-    margin-top: 0%;
-    margin-bottom: 0%;
-  }
-  
-  
-  .login__header p {
-    text-align: center;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    padding-top: 0%;
-  }
-  
-  
-  .login__header :first-child {
-    margin-top: 0;
-  }
-  
-  .login__header :last-child {
-    margin-bottom: 0;
-  }
-  
-  .login h2 .icon {
-    margin-right: 14px;
-  }
-  
-  .login__form {
-    background-color: #fff;
-    border-bottom-left-radius: 1.25em;
-    border-bottom-right-radius: 1.25em;
-    color: #777;
-    display: grid;
-    gap: 0.875em;
-    padding: 0em 2.90em;
-    border-left:10px #28ad63;
-  }
-  
-  
-  .login label{
-    text-align: left;
-    font-size: 12px;
-    margin: 0px;
-  }
-  
-  
-  .login input[type=textB] {
-    background-color: #fff;
-    width: 100%;
-    padding: 4px 7px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    font-size: 12px;
-  }
-  
-  .login input[type=textP] {
-    background-color: #eee;
-    width: 100%;
-    padding: 4px 7px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    font-size: 12px;
-  }
-  
-  .login select[type="tipoDoc"] {
-    padding: 5px 7px;
-    width: 80%;
-    font-size: 12px;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-  }
-  
-  
-  .login input[type="submit"] {
-    display: block;
-    margin: 0px auto;
-  }
-  
-  .logo-produce, h1, p {
-    text-align: left;
-    padding-top: 0px;
-  } 
-  
-  .logo-aplicacion, h1, p {
-    text-align: center;
-    padding-top: 0px;
-  } 
-  
-  .column {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .left {
-    width: 50%;
-  }
-  .right {
-    width: 50%;
-  }
-  .center {
-    text-align: center;
-  }
-  
-  .disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
-  }
-  
-  /*--------------Checkbox------------*/
-  
-  /* los checkboxes */
-  #c1 input:checked ~ .checkmark {
+}
+
+
+.login label{
+  text-align: left;
+  font-size: 12px;
+  margin: 0px;
+}
+
+
+.login input {
+  background-color: #fff;
+  width: 100%;
+  padding: 5px 7px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+
+/*   
+.login input[type=text] {
+  background-color: #fff;
+  width: 100%;
+  padding: 4px 7px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+  font-size: 12px;
+} */
+
+
+.login input:required {
+  border: 1px solid #EB1E23;
+}
+
+.login input:invalid {
+  border: 1px solid #EB1E23;
+}
+
+.login input:valid {
+  border: 1px solid #ccc;
+}
+
+.login select {
+  padding: 5px 7px;
+  width: 80%;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  box-sizing: border-box;
+}
+
+
+.login select:required {
+  border: 1px solid #EB1E23;
+}
+
+.login select:invalid {
+  border: 2px solid #EB1E23;
+}
+
+.login select:valid {
+  border: 2px solid #ccc;
+}
+
+
+.login input[type="submit"] {
+  display: block;
+  margin: 0px auto;
+}
+
+
+
+.logo-produce, h1, p {
+  text-align: left;
+  padding-top: 0px;
+} 
+
+.logo-aplicacion, h1, p {
+  text-align: center;
+  padding-top: 0px;
+} 
+
+.column {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.left {
+  width: 50%;
+}
+.right {
+  width: 50%;
+}
+.center {
+  text-align: center;
+}
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+/*--------------Checkbox------------*/
+
+/* los checkboxes */
+#c1 input:checked ~ .checkmark {
+background-color: #000;
+}
+
+/* Contenedor */
+.check {
+  display: block;
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+}
+
+/* escondemos el default checkbox */
+.check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* creamos un custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #ccc;
+  border-radius: 50%;
+}
+
+/* Al pasar el mouse encima, lo ponemos gris */
+.check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* creamos el marcador (escondido al no seleccionar) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* mostramos el marcador al seleccionar */
+.check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* estilo del marcador */
+.check .checkmark:after {
+  left: 7px;
+  top: 4px;
+  width: 1px;
+  height: 7px;
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.login .radio {
+  font-size: 10px;
+}
+
+.columnRadio {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+/* -------------Radio----------------*/
+
+/* El contenedor */
+.radio{
+  display: block;
+  position: relative;
+  padding-left: 22px;
+  cursor: pointer;
+  font-size: 12px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100%;
+}
+
+
+/* Ocultar el botón de opción predeterminado del navegador */
+.radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Crear un botón de opción personalizado */
+.checkradio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 10px;
+  width: 10px;
+  background-color: #eee;
+  border-radius: 50%;
+  margin-top: 3px;
+}
+
+/* Al pasar el mouse, agregue un color de fondo gris */
+.contradioainer:hover input ~ .checkradio {
+  background-color: #ccc;
+}
+
+/* Cuando el botón de radio está marcado, agrega un fondo azul */
+.radio input:checked ~ .checkradio {
   background-color: #000;
-  }
-  
-  /* Contenedor */
-  .check {
-    display: block;
-    position: relative;
-    padding-left: 20px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-  }
-  
-  /* escondemos el default checkbox */
-  .check input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  
-  /* creamos un custom checkbox */
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 15px;
-    width: 15px;
-    background-color: #ccc;
-    border-radius: 50%;
-  }
-  
-  /* Al pasar el mouse encima, lo ponemos gris */
-  .check:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-  
-  /* creamos el marcador (escondido al no seleccionar) */
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* mostramos el marcador al seleccionar */
-  .check input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  /* estilo del marcador */
-  .check .checkmark:after {
-    left: 6px;
-    top: 3px;
-    width: 1px;
-    height: 5px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-  
-  .login .radio {
-    font-size: 10px;
-  }
-  
-  .columnRadio {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  
-  /* -------------Radio----------------*/
-  
-  /* El contenedor */
-  .radio{
-    display: block;
-    position: relative;
-    padding-left: 22px;
-    cursor: pointer;
-    font-size: 12px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    width: 100%;
-  }
-  
-  
-  /* Ocultar el botón de opción predeterminado del navegador */
-  .radio input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-  }
-  
-  /* Crear un botón de opción personalizado */
-  .checkradio {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 10px;
-    width: 10px;
-    background-color: #eee;
-    border-radius: 50%;
-    margin-top: 3px;
-  }
-  
-  /* Al pasar el mouse, agregue un color de fondo gris */
-  .contradioainer:hover input ~ .checkradio {
-    background-color: #ccc;
-  }
-  
-  /* Cuando el botón de radio está marcado, agrega un fondo azul */
-  .radio input:checked ~ .checkradio {
-    background-color: #3ec77c;
-  }
-  
-  /* Crea el indicador (el punto/círculo - oculto cuando no está marcado) */
-  .checkradio:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* Mostrar el indicador (punto/círculo) cuando está marcado */
-  .radio input:checked ~ .checkradio:after {
-    display: block;
-  }
-  
-  
+}
+
+/* Crea el indicador (el punto/círculo - oculto cuando no está marcado) */
+.checkradio:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Mostrar el indicador (punto/círculo) cuando está marcado */
+.radio input:checked ~ .checkradio:after {
+  display: block;
+}
+
