--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -87,7 +87,7 @@
         <div class="column">
           <div class="left">
             <label class="radio">Al menos un simbolo
-             <input type="radio"  name="radioSimbolo"  disabled>
+             <input type="radio"  name="radioSimbolo" [checked]="ValidarSimbolo" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
