--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -12,7 +12,7 @@
             <p>Persona Jurídica</p>
       </header>
   
-      <div class="center">
+      <div class="Pasos">
         <button class="buttonPaso" (click)="clickPaso1()" >1</button>
         <button class="buttonPaso" (click)="clickPaso2()" >2</button>
         <button class="buttonPaso" (click)="clickPaso3()" >3</button>
