--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -78,7 +78,7 @@
 
         <div>
           <button class="buttonSiguiente" (click)="clickPaso3()">Siguiente</button>
-          <button class="buttonCancelar">Regresar</button>
+          <button class="buttonCancelar" (click)="clickPaso1()">Regresar</button>
         </div>
 
     </div>
@@ -104,7 +104,7 @@
 
         <div>
           <button class="buttonSiguiente" (click)="clickPaso4()">Siguiente</button>
-          <button class="buttonCancelar">Regresar</button>
+          <button class="buttonCancelar" (click)="clickPaso2()">Regresar</button>
         </div>
 
       </div>
@@ -166,7 +166,7 @@
        
         <div>
           <button class="buttonSiguiente">Registrar</button>
-          <button class="buttonCancelar">Regresar</button>
+          <button class="buttonCancelar" (click)="clickPaso3()">Regresar</button>
         </div>
 
       </div>
